--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="container">
-        
+
     </div>
 </body>
 </html>
