--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <header>
+        <button onclick="newGrid()">New Grid</button>
+    </header>
+    <main>
+        <div class="container">
 
-    </div>
+        </div>
+    </main>
 </body>
 </html>
