Make function write when mouse down not when mouse over

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <title>Etch a Sketch</title>
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <button onclick="newGrid()">New Grid</button>
+        <h1>Etch a Sketch</h1>
     </header>
     <main>
-        <div class="container">
-
+        <div class="buttons">
+            <button onclick="newGrid()">New Grid</button>
+            <button onclick="">Refresh Grid</button>
         </div>
+        <div class="container"></div>
     </main>
 </body>
 </html>
