Make refresh() function
that function change background-color for div to default

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="buttons">
             <button onclick="newGrid()">New Grid</button>
-            <button onclick="">Refresh Grid</button>
+            <button onclick="refresh()">Refresh Grid</button>
         </div>
         <div class="container"></div>
     </main>
