Make rainbow function but not work

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
     <header>
         <h1>Etch a Sketch</h1>
+        <p>Draw Everything You Imagine</p>
     </header>
     <main>
         <div class="buttons">
             <button onclick="newGrid()">New Grid</button>
-            <button onclick="refresh()">Refresh Grid</button>
+            <button onclick="refresh()">Refresh</button>
+            <button onclick="changeBackground(event,true)">Rainbow Mode</button>
         </div>
         <div class="container"></div>
     </main>
